deployment/ui-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: simplevis-ui-service
spec:
  selector:
    app: simplevis-ui
  ports:
    - protocol: TCP
      port: 5001
  readinessProbe:
    tcpSocket:
      port: 5001
    initialDelaySeconds: 5
    periodSeconds: 10
