deployment/ui-route.yml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: simplevis-ui
spec:
  host: simplevis-ui.davenet.local
  to:
    kind: Service
    name: simplevis-ui-service
    weight: 100
  port:
    targetPort: 5001
  wildcardPolicy: None
